--- a/events/pragmaIndia.toml
+++ b/events/pragmaIndia.toml
@@ -10,7 +10,7 @@ org =  "ETH Global"
 website = "https://www.google.com/url?q=https://ethglobal.com/events/pragma-india&sa=D&source=editors&ust=1701783124663184&usg=AOvVaw0T__2UJ4rVBdJE0Woedint"
 
 # the start date of the event
-date = "2023-11-07"
+date = "2023-12-07"
 
 # how many days the event lasts (1 - N)
 days = 1
@@ -19,7 +19,7 @@ days = 1
 times = "10:00 AM - 18:00 PM"
 
 # the event venue name (will show up on the event card - TODO)
-venueName = "(https://www.google.com/url?q=https://maps.app.goo.gl/9ET4X8pPM2gbBoPUA&sa=D&source=editors&ust=1701783124662863&usg=AOvVaw1aIQGUw6VtMXJ8x6tdjKxL)"
+venueName = "[SAMPLE](https://www.google.com/url?q=https://maps.app.goo.gl/9ET4X8pPM2gbBoPUA&sa=D&source=editors&ust=1701783124662863&usg=AOvVaw1aIQGUw6VtMXJ8x6tdjKxL)"
 
 # the event venue address (will show up on a map -- TODO)
 venueAddress = "TBA"
@@ -40,11 +40,11 @@ tags = ["Conference/Summit"]
 color="orange"
 
 # A small logomark for the corner of the event
-#logomark = "/logomarks/Compute+Over+Data+Working+Group+Logo.png"
+# logomark = "/logomarks/Compute+Over+Data+Working+Group+Logo.png"
 
 # a description of the event.
 # will show up when the user clicks the event card.
-#description = """The Compute over Data summit is a two day conference November 2-3 in Lisbon, Portugal. We will be gathering to talk about the future of computation across the spectrum. Areas covered consist of distributed datasets, both edge and data centers, and technologies such as WASM, reproducible builds, and consensus. Most of all, we want to convene to help bring about the next generation of platforms that make using data and compute together easier and more efficient.
+# description = """The Compute over Data summit is a two day conference November 2-3 in Lisbon, Portugal. We will be gathering to talk about the future of computation across the spectrum. Areas covered consist of distributed datasets, both edge and data centers, and technologies such as WASM, reproducible builds, and consensus. Most of all, we want to convene to help bring about the next generation of platforms that make using data and compute together easier and more efficient.
 
 # Watch the day 1 [recording](https://www.youtube.com/watch?v=WqquUQDgHj0), day 2 track 1 [recording](https://www.youtube.com/watch?v=qsTLEbUEmFI), or day 2 track 2 [recording](https://www.youtube.com/watch?v=MWQ5WjbVXQo)!"""
 
@@ -53,4 +53,4 @@ color="orange"
 priority = 3
 
 # if event has a livestream uncomment the following line
- isLive = false
+isLive = false
